--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,11 @@ Package: ADMGtmle
 Title: An R Package for Causal Effect Estimation in Graphical Models with Unmeasured Variables
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+    person("Anna", "Guo", 
+       email = "guo.anna617@gmail.com",
+       role = c("aut", "cre"),
+       comment = c(GitHub = "https://github.com/annaguo-bios"))
+Description: An R package for estimating causal effects in graphical models with unmeasured variables. It implements the doubly robust onestep estimator and Targeted Maximum Likelihood Estimation (TMLE) estimator. It is able to incorporate machine learning algorithms via SuperLearn and allows sample splitting in model training.
 License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
