--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(ADMGtmle)
 export(CML)
 export(NPS.TMLE.a)
+export(calculate_density_ratio_dnorm)
 export(cnt.districts)
 export(f.adj_matrix)
 export(f.children)
@@ -31,4 +32,5 @@ import(itertools)
 import(mvtnorm)
 import(stats)
 import(utils)
+importFrom(mvtnorm,dmvnorm)
 importFrom(utils,combn)
