major fix. fixed sequential regression in TMLE. fixed bayes and densratio method. for bayes method, the denomiator changed. for the bayes, make it depend on densratioA

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(f.top_order)
 export(f.top_orderMAT)
 export(fix)
 export(insert)
+export(is.fix)
 export(is.mb.shielded)
 export(is.np.saturated)
 export(is.p.fix)
