if the superlearner lib only has one algorithm, force the weight of the algorithm to be 1. I did this in the simulation branch cause this is served for simulation purpose only, where in sim4, we need to force the weight for the random forest to be 1. I don't think this is necessary in practice.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,13 +26,28 @@ export(make.graph)
 export(replace.vector)
 export(rerank)
 export(treatment.queue)
-import(MASS)
-import(SuperLearner)
-import(densratio)
-import(dplyr)
-import(itertools)
-import(mvtnorm)
-import(stats)
-import(utils)
+importFrom(MASS,mvrnorm)
+importFrom(SuperLearner,CV.SuperLearner)
+importFrom(SuperLearner,SuperLearner)
+importFrom(densratio,densratio)
+importFrom(dplyr,"%>%")
+importFrom(dplyr,mutate)
+importFrom(dplyr,select)
 importFrom(mvtnorm,dmvnorm)
+importFrom(stats,as.formula)
+importFrom(stats,binomial)
+importFrom(stats,coef)
+importFrom(stats,cov)
+importFrom(stats,dbinom)
+importFrom(stats,dnorm)
+importFrom(stats,gaussian)
+importFrom(stats,glm)
+importFrom(stats,lm)
+importFrom(stats,plogis)
+importFrom(stats,predict)
+importFrom(stats,qlogis)
+importFrom(stats,rbinom)
+importFrom(stats,rnorm)
+importFrom(stats,runif)
+importFrom(stats,sd)
 importFrom(utils,combn)
