--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,13 +6,12 @@ Authors@R:
        email = "guo.anna617@gmail.com",
        role = c("aut", "cre"),
        comment = c(GitHub = "https://github.com/annaguo-bios"))
-Description: An R package for estimating causal effects in graphical models with unmeasured variables. It implements the doubly robust onestep estimator and Targeted Maximum Likelihood Estimation (TMLE) estimator. It is able to incorporate machine learning algorithms via SuperLearn and allows sample splitting in model training.
+Description: An R package for estimating causal effects in graphical models with unmeasured variables. It implements the doubly robust onestep estimator and Targeted Maximum Likelihood Estimation (TMLE) estimator. It is able to incorporate machine learning algorithms via SuperLearner and allows sample splitting in model training.
 License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1.9000
 Imports:
-    itertools,
     dplyr,
     SuperLearner,
     densratio,
@@ -24,5 +23,6 @@ Depends:
 LazyData: true
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown,
+    flexCausal
 VignetteBuilder: knitr
